# scrapy-h5

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
parsel_h5/: __init__.py  middleware.py  middleware_test.py  response.py  selector.py  selector_test.py  xpath.py  xpath_test.py
scrapy_h5/: __init__.py  extractor.py  extractor_test.py  integration_test.py  middleware.py  middleware_test.py  response.py  selector.py  selector_test.py
